# cloudflow

./: .gitignore  AGENTS.md  Makefile  README (1).md  README.md  architecture.md  run-local-redis.sh  splunk-sink.example.yaml
.github/workflows/: ci.yaml  ci.yml
configs/examples/: clickhouse-sink.yaml  dhcp-source.yaml  dns-source.yaml  redis.yaml
docs/: architecture.md  building-and-testing.md  clickhouse-sink.md  dhcp-source.md  dns-source.md  event-model.md  failure-modes.md  integration-harness.md  redis-streams.md  selinux.md  splunk-metrics.md  splunk-output.md
docs/design/: 00-overview.md  01-foundations.md  02-packet-and-parsing.md  03-source-dhcp.md  04-sink-splunk.md  05-tools-tests-ci.md  06-sink-splunk-c.md  07-dns-source.md
import/network_dhcp_collector/: Dockerfile  Makefile  README.md
import/network_syslog_collector/: Makefile  README.md
libs/cloudflow-capture/: Makefile  cf_bpf.c  cf_bpf.h  cf_pcap_replay.c  cf_pcap_replay.h  cf_queue_policy.c  cf_queue_policy.h  cf_rx_reader.c  cf_rx_reader.h  cf_rx_stats.h
libs/cloudflow-codec/: Makefile
libs/cloudflow-core/: Makefile  cf_event_id.c  cf_event_id.h  cf_log.c  cf_log.h  cf_queue.c  cf_queue.h  cf_stats.h  cf_sync.c  cf_sync.h  cf_time.c  cf_time.h  cloudflow.c  cloudflow.h  sha256.c  sha256.h
libs/cloudflow-packet/: Makefile  cf_decap.c  cf_decap.h  cf_dhcpv4.c  cf_dhcpv4.h  cf_dhcpv4_decode.c  cf_dhcpv4_internal.h  cf_dhcpv4_optnames.c  cf_dhcpv4_optnames.h  cf_dhcpv4_util.c  cf_dhcpv6.c  cf_dhcpv6.h  cf_dhcpv6_decode.c  cf_dhcpv6_internal.h  cf_dhcpv6_optnames.c  cf_dhcpv6_optnames.h  cf_dhcpv6_util.c  cf_dns.c  cf_dns.h  cf_ipfmt.c  cf_ipfmt.h  cf_parse_util.c  cf_parse_util.h
libs/cloudflow-redis/: Makefile  cf_redis_cluster.c  cf_redis_cluster.h  cf_redis_producer.c  cf_redis_producer.h  cf_redis_slot.c  cf_redis_slot.h
libs/cloudflow-sink-core/: Makefile  cf_sink_config.c  cf_sink_config.h  cf_sink_consumer.c  cf_sink_consumer.h  cf_sink_deadletter.c  cf_sink_deadletter.h  cf_sink_delivery.h  cf_sink_hec.c  cf_sink_hec.h  cf_sink_httpdeliver.c  cf_sink_httpdeliver.h  cf_sink_run.c  cf_sink_run.h  cf_sink_stats.c  cf_sink_stats.h
mk/: toolchain.mk
scripts/: benchmark-xadd.sh  generate-protobuf.sh  run-integration-tests.sh  run-local-redis.sh
sinks/cloudflow-sink-clickhouse/: .gitignore  Makefile  README.md
sinks/cloudflow-sink-splunk/: .gitignore  Makefile  README.md  pyproject.toml
sinks/cloudflow-sink-splunk-metrics/: .gitignore  Makefile  (+1 more)
sinks/cloudflow-sink-splunk/config/: splunk-sink.example.yaml
sinks/cloudflow-sink-splunk/selinux/: Makefile  cloudflow_sink_splunk.fc  cloudflow_sink_splunk.te
sinks/cloudflow-sink-splunk/src/: config.c  config.h  consumer.c  consumer.h  deadletter.c  deadletter.h  hec.c  hec.h  main.c  stats.c  stats.h  transform.c  transform.h
sinks/cloudflow-sink-splunk/src/cloudflow_pb/: README.md
sinks/cloudflow-sink-splunk/src/cloudflow_pb/cloudflow/v1/: common_pb2.py  dhcp_pb2.py  dns_pb2.py  envelope_pb2.py
sinks/cloudflow-sink-splunk/src/cloudflow_sink_splunk/: __init__.py  __main__.py  config.py  consumer.py  deadletter.py  hec.py  metrics.py  transform.py
sinks/cloudflow-sink-splunk/systemd/: cloudflow-sink-splunk.service
sinks/cloudflow-sink-splunk/tests/: conftest.py  fixtures.py  generate_fixtures.py  hec_stub.py  test_config.py  test_consumer.c  test_consumer_redis.py  test_hec.c  test_hec_client.py  test_transform_golden.c  test_transform_golden.py
sinks/cloudflow-sink-splunk/tests/golden/: dhcpv4_discover_raw_payload_stripped.json  dhcpv6_solicit.json  dns_transaction.json  dns_transaction_role.json
src/: cf_queue.h  cloudflow.h
tools/decode-event/: pyproject.toml
tools/decode-event/src/cloudflow_decode_event/: __init__.py  _bootstrap.py  cli.py  hec_mapping.py  hexdump.py  redis_endpoint.py
tools/decode-event/tests/: conftest.py  test_decode_event.py
tools/stream-inspect/: pyproject.toml
tools/stream-inspect/src/cloudflow_stream_inspect/: __init__.py  cli.py  redis_endpoint.py
tools/stream-inspect/tests/: conftest.py  test_stream_inspect.py
(+229 files in other folders)
