[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflow-sink-splunk"
version = "0.1.0"
description = "Redis Streams to Splunk HEC sink for CloudFlow events (WP-12)."
requires-python = ">=3.9"
dependencies = [
    "protobuf",
    "redis",
    "requests",
    "PyYAML",
]

[project.scripts]
cloudflow-sink-splunk = "cloudflow_sink_splunk.__main__:main"

[tool.setuptools]
# Two source roots are stitched together here: the sink package lives under
# src/cloudflow_sink_splunk, and the generated protobuf bindings (WP-02,
# committed, never hand-edited) live under src/cloudflow_pb/cloudflow. Both
# need to be importable -- `import cloudflow_sink_splunk` and
# `from cloudflow.v1 import envelope_pb2` -- whether installed (pip install
# -e .) or run straight out of the checkout via
# PYTHONPATH=src:src/cloudflow_pb.
packages = [
    "cloudflow_sink_splunk",
    "cloudflow",
    "cloudflow.v1",
]

[tool.setuptools.package-dir]
cloudflow_sink_splunk = "src/cloudflow_sink_splunk"
cloudflow = "src/cloudflow_pb/cloudflow"
"cloudflow.v1" = "src/cloudflow_pb/cloudflow/v1"
